Fix overflow issue from quiz area onto toggle button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,11 @@ body {
     background-color: var(--primary-bg-color);
 }
 
+#toggle-wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .toggle-icon {
     background-color: var(--white-bg-color);
     height: 5rem;
@@ -31,7 +36,6 @@ body {
     border-radius: 50%;
     margin-top: 2.5rem;
     margin-right: 2.5rem;
-    float: right;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,7 +65,6 @@ h2 {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
@@ -87,6 +90,10 @@ h2 {
 
 .justify-center {
     justify-content: center;
+}
+
+.flex-start {
+    align-items: flex-start;
 }
 
 /* button */
@@ -188,7 +195,6 @@ h2 {
 }
 
 .qh-prefix {
-    /* text-align: center; */
     font-size: 2rem;
 }
 
